--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     // Attributionを折りたたみ表示
     map.addControl(new mapboxgl.AttributionControl({
       compact: true,
-      customAttribution: '（<a href="https://twitter.com/shi__works" target="_blank">Twitter</a> | <a href="https://github.com/shi-works/gsi-dem-yourself-relief-map-on-mapbox-gl-js" target="_blank">Github</a>） '
+      customAttribution: '（<a href="https://twitter.com/shi__works" target="_blank">Twitter</a> | <a href="https://github.com/shi-works/noto-east-terrain-rgb-yourself-relief-map-on-mapbox-gl-js" target="_blank">Github</a>） '
     }));
 
     // 地図がロードされたら実行
@@ -92,7 +92,7 @@
         "maxzoom": 18,
         "tiles": ["https://mapdata.qchizu.xyz/95disaster/202401noto_05/{z}/{x}/{y}.png"],
         "tileSize": 256,
-        "attribution": "<a href='https://www.geospatial.jp/ckan/dataset/aac-disaster-20240101-dem target='_blank'>令和6年能登半島地震（能登東部発災前DEM）を加工して作成</a>"
+        // "attribution": "<a href='https://www.geospatial.jp/ckan/dataset/aac-disaster-20240101-dem target='_blank'>令和6年能登半島地震（能登東部発災前DEM）を加工して作成</a>"
       })
 
       // 標高カラーを定義
